[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alproj"
version = "1.1.0"
description = "A georectification tool for alpine landscape photographs, written in Python"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Ryotaro Okamoto", email = "okamoto.ryotaro@nies.go.jp"}
]
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["georectification", "alpine", "landscape", "photography", "GIS", "remote sensing"]

dependencies = [
    "numpy>=1.20,<3",
    "pandas>=1.3",
    "rasterio>=1.2",
    "opencv-python>=4.5",
    "moderngl>=5.6",
    "cmaes>=0.8",
    "tqdm>=4.60",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
vismatch = [
    "vismatch",
]

[project.urls]
Homepage = "https://github.com/0kam/alproj"
Documentation = "https://alproj.readthedocs.io/en/latest/"
Repository = "https://github.com/0kam/alproj"
Issues = "https://github.com/0kam/alproj/issues"

[tool.setuptools.packages.find]
where = ["src"]
